# src/app/api/functions.ts
@@ -1,6 +1,12 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { GetYearsSummary$Params as GetYearsSummary$Params } from './fn/calendar/get-years-summary';
+export { getYearsSummary as getYearsSummary } from './fn/calendar/get-years-summary';
+export type { GetMonthsSummary$Params as GetMonthsSummary$Params } from './fn/calendar/get-months-summary';
+export { getMonthsSummary as getMonthsSummary } from './fn/calendar/get-months-summary';
+export type { GetTripsByMonth$Params as GetTripsByMonth$Params } from './fn/calendar/get-trips-by-month';
+export { getTripsByMonth as getTripsByMonth } from './fn/calendar/get-trips-by-month';
 export type { LoginUser$Params as LoginUser$Params } from './fn/users/login-user';
 export { loginUser as loginUser } from './fn/users/login-user';
 export type { GetAllUsers$Params as GetAllUsers$Params } from './fn/users/get-all-users';
